--- a/Example_Data_Sandia.ipynb
+++ b/Example_Data_Sandia.ipynb
@@ -3665,7 +3665,8 @@
    "hash": "f0b4122ef01287e772364b46c8ab7fc191b99504e2c60fdea0ffe2ad0e9109c5"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.11 64-bit ('tf': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -3678,7 +3679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
