--- a/bookshelf/code/streaming/sensor_errors.ipynb
+++ b/bookshelf/code/streaming/sensor_errors.ipynb
@@ -396,7 +396,7 @@
    "hash": "1ca9cba2bd0fd8af955a9d1453792a4cdaf06581b11717e5924d48dc92a46b40"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.12 64-bit ('end2end': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,9 +410,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.7"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
